[gd_scene load_steps=15 format=3 uid="uid://34312c1wwd6f"]

[ext_resource type="PackedScene" uid="uid://c588ee1qlml63" path="res://assets/ground_long.tscn" id="1_c1ihq"]
[ext_resource type="Script" path="res://Levels/level6.gd" id="1_mbpgv"]
[ext_resource type="PackedScene" uid="uid://crkuk68ie5k5u" path="res://assets/background.tscn" id="2_8dg30"]
[ext_resource type="PackedScene" uid="uid://cqyajh3ukg6xx" path="res://assets/cowboy_2d.tscn" id="3_2nnph"]
[ext_resource type="PackedScene" uid="uid://b1naniduoabeq" path="res://assets/lasso_projectile.tscn" id="4_wur5e"]
[ext_resource type="PackedScene" uid="uid://brwftp8w3m6ti" path="res://assets/horse_2d.tscn" id="5_0mlo5"]
[ext_resource type="PackedScene" uid="uid://dsyq8e0ohiyf8" path="res://assets/victory_sign.tscn" id="6_cexpj"]
[ext_resource type="PackedScene" uid="uid://c66d37c47tpld" path="res://assets/button_area_2d.tscn" id="7_13wvf"]
[ext_resource type="PackedScene" uid="uid://d2thb3t7nq1n2" path="res://Levels/level7.tscn" id="8_aas8a"]
[ext_resource type="PackedScene" uid="uid://c40nag2xlkk4f" path="res://assets/ground_short.tscn" id="8_svkw7"]
[ext_resource type="PackedScene" uid="uid://cjfa5kxh5bijq" path="res://assets/decor_largeBush.tscn" id="10_qq6d2"]
[ext_resource type="PackedScene" uid="uid://ds43wbjmolygo" path="res://assets/decor_pricklypear.tscn" id="11_oo02q"]
[ext_resource type="PackedScene" uid="uid://c6306jbij6dvn" path="res://assets/deco_smallBush.tscn" id="12_6qe7t"]
[ext_resource type="PackedScene" uid="uid://bdr0pf3kvk71" path="res://assets/instructions.tscn" id="14_a7lp8"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mbpgv")

[node name="Environment" type="Node2D" parent="."]

[node name="Ground" parent="Environment" instance=ExtResource("1_c1ihq")]
position = Vector2(-370, 184)
useSunset = true

[node name="Ground2" parent="Environment" instance=ExtResource("1_c1ihq")]
position = Vector2(31, -138)
useSunset = true

[node name="Ground5" parent="Environment" instance=ExtResource("1_c1ihq")]
position = Vector2(344, 192)
rotation = -0.0872665
useSunset = true

[node name="Ground3" parent="Environment" instance=ExtResource("1_c1ihq")]
position = Vector2(-485, -57)
rotation = 1.5708
useSunset = true

[node name="Ground4" parent="Environment" instance=ExtResource("1_c1ihq")]
position = Vector2(502, -58)
rotation = 1.5708
useSunset = true

[node name="Background" parent="Environment" instance=ExtResource("2_8dg30")]
position = Vector2(-3, -6)
scale = Vector2(1.23896, 1.23896)
useSunset = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.25, 1.25)

[node name="Cowboy2D" parent="." node_paths=PackedStringArray("horse") instance=ExtResource("3_2nnph")]
z_index = 2
position = Vector2(390, -205)
horse = NodePath("../Horse2D")
lassoProjectile = ExtResource("4_wur5e")

[node name="Horse2D" parent="." node_paths=PackedStringArray("cowboy") instance=ExtResource("5_0mlo5")]
z_index = 1
position = Vector2(313, -204)
cowboy = NodePath("../Cowboy2D")

[node name="VictorySign" parent="." instance=ExtResource("6_cexpj")]
position = Vector2(298, 117)
rotation = -0.0872665
useSunset = true
nextScene = ExtResource("8_aas8a")

[node name="ButtonArea2D" parent="." instance=ExtResource("7_13wvf")]
position = Vector2(-329, 147)
useSunset = true

[node name="ButtonArea2D2" parent="." instance=ExtResource("7_13wvf")]
position = Vector2(414, 147)
rotation = -0.0872665
useSunset = true

[node name="GroundShort" parent="." instance=ExtResource("8_svkw7")]
position = Vector2(297, -138)
useSunset = true

[node name="GroundShort2" parent="." instance=ExtResource("8_svkw7")]
position = Vector2(457, -150)
rotation = -0.174533
useSunset = true

[node name="DecorLargeBush" parent="." instance=ExtResource("10_qq6d2")]
position = Vector2(-433, 142)
useSunset = true

[node name="DecorLargeBush2" parent="." instance=ExtResource("10_qq6d2")]
position = Vector2(-390, 158)
useSunset = true

[node name="DecorPricklyPear" parent="." instance=ExtResource("11_oo02q")]
position = Vector2(-84, -214)
useSunset = true

[node name="DecorLargeBush3" parent="." instance=ExtResource("10_qq6d2")]
position = Vector2(259, -186)
useSunset = true

[node name="DecorSmallBush" parent="." instance=ExtResource("12_6qe7t")]
position = Vector2(383, -179)
useSunset = true

[node name="DecorPricklyPear2" parent="." instance=ExtResource("11_oo02q")]
position = Vector2(463, 104)
useSunset = true

[node name="Instructions" parent="." instance=ExtResource("14_a7lp8")]
offset_left = -468.0
offset_top = -258.0
offset_right = -468.0
offset_bottom = -258.0
scale = Vector2(0.843791, 0.800529)
